fix not centered text of btns
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@56583 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/settings-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/settings-styles.scss
@@ -49,6 +49,7 @@ $shadow-dark: 0px 0px 2px 1px rgba(102, 102, 102, 0.3);
     			
     			.html-face {
     				pointer: default;
+    				text-align: center;
     				height: 36px;	
     			}
     		
