--- a/web/src/main/resources/org/geogebra/web/resources/scss/toolbar-styles.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/toolbar-styles.scss
@@ -305,6 +305,7 @@
 				line-height: 36px;
     			height: 36px;
     			min-width: 64px;
+    			text-align: center;
     			align-content: center;
     			font-family: Roboto,sans-serif;
     			font-weight: 400;
